--- a/static/main.css
+++ b/static/main.css
@@ -1,8 +1,7 @@
-
 .content-section {
-  background: #e5dcdb;
+  background: #;
   padding: 10px 20px;
-  border: 1px solid #dddddd;
+  border: none;
   border-radius: 3px;
   margin-bottom: 20px;
 }
@@ -42,3 +41,7 @@ a.article-title:hover {
   height: 25px;
   vertical-align: middle;
 }
+
+.card{
+    margin-top: 20px;
+    }
