made another 3 boxes

--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 {% block content %}
 <main class="container">
     <div class="row">
-        <div class="col-md-8">
+        <div class="col-sm-4">
             <article class="media content-section">
                 <div class="media-body">
                     <div class="card" style="width: 18rem;">
@@ -17,10 +17,10 @@
                 </div>
 
             </article>
-
         </div>
 
-         <div class="col-md-8">
+
+         <div class="col-sm-4">
             <article class="media content-section">
                 <div class="media-body">
                     <div class="card" style="width: 18rem;">
@@ -36,8 +36,84 @@
 
             </article>
 
-        </div>
+         </div>
+
+        <div class="col-sm-4">
+            <article class="media content-section">
+                <div class="media-body">
+                    <div class="card" style="width: 18rem;">
+                        <img class="card-img-top" src="../static/bayek.jpg" alt="Card image cap">
+                        <div class="card-body">
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the
+                                card's
+                                content.</p>
+                        </div>
+                    </div>
+                </div>
+
+            </article>
+
+         </div>
+
+
+        <div class="col-md-4">
+            <article class="media content-section">
+                <div class="media-body">
+                    <div class="card" style="width: 18rem;">
+                        <img class="card-img-top" src="../static/bayek.jpg" alt="Card image cap">
+                        <div class="card-body">
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the
+                                card's
+                                content.</p>
+                        </div>
+                    </div>
+                </div>
+
+            </article>
+
+         </div>
+
+
+        <div class="col-sm-4">
+            <article class="media content-section">
+                <div class="media-body">
+                    <div class="card" style="width: 18rem;">
+                        <img class="card-img-top" src="../static/bayek.jpg" alt="Card image cap">
+                        <div class="card-body">
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the
+                                card's
+                                content.</p>
+                        </div>
+                    </div>
+                </div>
+
+            </article>
+
+         </div>
+
+
+        <div class="col-sm-4">
+            <article class="media content-section">
+                <div class="media-body">
+                    <div class="card" style="width: 18rem;">
+                        <img class="card-img-top" src="../static/bayek.jpg" alt="Card image cap">
+                        <div class="card-body">
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the
+                                card's
+                                content.</p>
+                        </div>
+                    </div>
+                </div>
+
+            </article>
+
+         </div>
     </div>
+
 </main>
 
 {% endblock %}
