--- a/static/main.css
+++ b/static/main.css
@@ -46,3 +46,11 @@ a.article-title:hover {
     margin-top: 20px;
     }
 
+.signup{
+    border:5px solid black;
+    border-radius:10px;
+    width:800px;
+    padding:50px;
+    margin-left:500px;
+    margin-top:100px;
+}
