--- a/templates/base.html
+++ b/templates/base.html
@@ -47,13 +47,15 @@
                         <div class="modal-header">
                             <h5 class="modal-title" id="loginModalLabel">Login</h5>
                         </div>
-                        <div class="modal-body">
+                        <div class="modal-body login-align">
                             <form method="POST">
                                 <div class="form-group">
-                                    {{render_field(form.email, class="form-control")}}
+                                    <label> Email: </label>
+                                    <input class="form-control" type="email" name="login_email" placeholder="name@example.com">
+                                    <label> Password: </label>
+                                    <input class="form-control" type="password" name="login_password" placeholder="secret">
                                 </div>
                                 <div class="form-group">
-                                    {{render_field(form.password, class="form-control")}}
                                 </div>
                             </form>
                         </div>
