--- a/templates/signup.html
+++ b/templates/signup.html
@@ -21,7 +21,7 @@
         <div class="form-group col">
             <label for="email" class="col-sm-2 col-form-label">Email:</label>
             <div class="col-sm-10">
-                <input type="email" class="form-control" id="email" placeholder="For Example a@example.com">
+                <input type="email" class="form-control" id="email" placeholder="apple@example.com">
             </div>
         </div>
         <div class="form-group col">
@@ -33,7 +33,7 @@
         <div class="form-group col">
             <label for="inputPassword" class="col-sm-2 col-form-label">Repeat Password:</label>
             <div class="col-sm-10">
-                <input type="password" class="form-control" id="repeatPassword" placeholder=" Repeat Password">
+                <input type="password" class="form-control" id="repeatPassword" placeholder="Repeat Password">
             </div>
         </div>
 
