--- a/templates/signup.html
+++ b/templates/signup.html
@@ -13,8 +13,8 @@
 <div class="signup">
     <form>
         <div class="form-group col">
+            <label for="name" class="col-sm-2 col-form-label">Name:</label>
             <div class="col-sm-10">
-                <label for="name">Name:</label>
                 <input type="text" class="form-control" id="name" placeholder="Enter Name">
             </div>
         </div>
@@ -31,13 +31,15 @@
             </div>
         </div>
         <div class="form-group col">
-            <label for="inputPassword" class="col-sm-2 col-form-label">Repeat Password:</label>
+            <label for="inputPassword" class="col-sm-3 col-form-label">Repeat Password:</label>
             <div class="col-sm-10">
                 <input type="password" class="form-control" id="repeatPassword" placeholder="Repeat Password">
             </div>
         </div>
+        <div class="text-center">
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
 
-        <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 </div>
 
