--- a/static/main.css
+++ b/static/main.css
@@ -56,3 +56,18 @@ a.article-title:hover {
     margin-bottom: 100px;
 }
 
+#details{
+    border: 2px solid grey;
+    border-radius:10px;
+    margin-top:100px;
+    margin-left:30px;
+    padding:30px;
+}
+
+#order{
+    border: 2px solid orange;
+    border-radius:10px;
+    margin-top:100px;
+    margin-left:10px;
+    padding:10px;
+}
