--- a/templates/home.html
+++ b/templates/home.html
@@ -11,6 +11,9 @@
                         <div class="card-body">
                             <p class="card-text">{{ item.name }}</p>
                         </div>
+                        <div class="text-center">
+                            <a href="/checkout"><button class="btn btn-primary">Add to Cart</button></a>
+                        </div>
                     </div>
                 </div>
             </article>
