--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,47 +1,46 @@
-<!DOCTYPE html>
-<html lang="en">
 {% extends "base.html" %}
-<head>
+{% from "formhelper.html" import render_field %}
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
-</head>
 
 {% block content %}
-<div class="signup">
-    <form>
+    <form method="post" class="signup">
         <div class="form-group col">
-            <label for="name" class="col-sm-2 col-form-label">Name:</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="name" placeholder="Enter Name">
-            </div>
+            {{render_field(form.username, class="form-control", placeholder="Tom")}}
+<!--            <label for="name" class="col-sm-2 col-form-label">Name:</label>-->
+<!--            <div class="col-sm-10">-->
+<!--                <input type="text" class="form-control" id="name" placeholder="Enter Name">-->
+<!--            </div>-->
         </div>
         <div class="form-group col">
-            <label for="email" class="col-sm-2 col-form-label">Email:</label>
-            <div class="col-sm-10">
-                <input type="email" class="form-control" id="email" placeholder="apple@example.com">
-            </div>
+            {{render_field(form.email, class="form-control", placeholder="apple@example.com")}}
+<!--            <label for="email" class="col-sm-2 col-form-label">Email:</label>-->
+<!--            <div class="col-sm-10">-->
+<!--                <input type="email" class="form-control" id="email" placeholder="apple@example.com">-->
+<!--            </div>-->
         </div>
         <div class="form-group col">
-            <label for="inputPassword" class="col-sm-2 col-form-label">Password:</label>
-            <div class="col-sm-10">
-                <input type="password" class="form-control" id="inputPassword" placeholder="Enter Password">
-            </div>
+            {{render_field(form.password, class="form-control", placeholder="secret")}}
+<!--            <label for="inputPassword" class="col-sm-2 col-form-label">Password:</label>-->
+<!--            <div class="col-sm-10">-->
+<!--                <input type="password" class="form-control" id="inputPassword" placeholder="Enter Password">-->
+<!--            </div>-->
         </div>
         <div class="form-group col">
-            <label for="inputPassword" class="col-sm-3 col-form-label">Repeat Password:</label>
-            <div class="col-sm-10">
-                <input type="password" class="form-control" id="repeatPassword" placeholder="Repeat Password">
-            </div>
+            {{render_field(form.confirm, class="form-control", placeholder="Repeat Password")}}
+<!--            <label for="repeatPassword" class="col-sm-3 col-form-label">Repeat Password:</label>-->
+<!--            <div class="col-sm-10">-->
+<!--                <input type="password" class="form-control" id="repeatPassword" placeholder="Repeat Password">-->
+<!--            </div>-->
         </div>
         <div class="text-center">
             <button type="submit" class="btn btn-primary">Submit</button>
         </div>
-
     </form>
-</div>
 
 {% endblock %}
-</html>
+
