--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -1,4 +1,4 @@
-
+{% extends "base.html" %}
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -29,7 +29,6 @@
                     <div class="form-group col-md-6">
                         <label>CCV:</label>
                         <input type="text" class="form-control" placeholder="345">
-
                     </div>
                 </div>
 
