--- a/static/main.css
+++ b/static/main.css
@@ -71,3 +71,13 @@ a.article-title:hover {
     margin-left:10px;
     padding:10px;
 }
+
+.delivery{
+    border:5px solid black;
+    border-radius:10px;
+    width:800px;
+    padding:50px;
+    margin: auto;
+    margin-top:100px;
+    margin-bottom: 100px;
+}
