--- a/static/main.css
+++ b/static/main.css
@@ -1,3 +1,33 @@
+body{
+font-family: Quenda-Medium;
+}
+
+.navbar-links{
+color: #253D52;
+padding-right: .5rem;
+    padding-left: .5rem;
+    display: block;
+    padding: .5rem 1rem;
+}
+
+.navbar-links:hover{
+color:#007DE8;
+  transition: all 0.6s ease;
+  text-decoration: none;
+}
+
+.btn-navbar{
+    color: #253d52;
+    background-color: transparent;
+    border-color: #253d52;
+}
+
+.btn-navbar:hover{
+    color: white;
+    background-color: #253d52;
+    border-color: #253d52;
+}
+
 .content-section {
   background: #;
   padding: 10px 20px;
@@ -28,7 +58,7 @@ a.article-title:hover {
 .article-metadata {
   padding-bottom: 1px;
   margin-bottom: 4px;
-  border-bottom: 1px solid #e3e3e3
+  border-bottom: 1px solid #e3e3e3;
 }
 
 .article-metadata a:hover {
@@ -81,3 +111,41 @@ a.article-title:hover {
     margin-top:100px;
     margin-bottom: 100px;
 }
+
+/*Search Bar Extends */
+.search-box {
+  width: auto;
+  position: relative;
+}
+
+.input_search {
+display: inline-block;
+vertical-align: middle;
+background-color: lightgrey;
+  box-sizing: border-box;
+  width: 100px;
+  padding: 0 20px;
+  outline: none;
+  font-size: 18px;
+  border-radius: 50px;
+  color: #29313a;
+  border: 1px;
+  transition: all 0.8s ease;
+}
+
+.input_search:focus {
+  width: 250px;
+  background: light grey;
+    border: 1px solid #007de8;
+}
+/*Search Bar Extends */
+
+/* NEW FONT!! QUENDA MEDIUM */
+@font-face{
+font-family: 'Quenda-Medium';
+src: url(Quenda-Medium.otf);
+}
+/*end import font*/
+
+
+
