--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
     <title>SWOY Bubble Tea</title>
 </head>
@@ -16,8 +19,8 @@
 {% from "formhelper.html" import render_field %}
 
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="/home">SWOY Bubble Tea</a>
+<nav class="navbar navbar-expand-lg navbar-dark" style="background:#E7F3FC;">
+    <img class="navbar-brand" href="/home" src="static\cover2.png" style="height:200px;"/>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -25,24 +28,27 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Products<span class="sr-only">(current)</span></a>
-            </li>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
+<!--            <li class="nav-item active">-->
+<!--                <a class="navbar-links" href="#">Products<span class="sr-only">(current)</span></a>-->
+<!--            </li>-->
+            <div class="search-box">
+                <form class="form-inline">
+                    <input class="mr-sm-2 input_search" type="text" placeholder="Search" aria-label="Search">
+
+                    <button class="btn btn-navbar my-2 my-sm-0" type="submit" style="border-radius:50%;"><i class="fas fa-search"></i></button>
+                </form>
+            </div>
         </ul>
         <ul class="navbar-nav">
             <li class="nav-item active">
                 <!-- Button trigger modal -->
-                <a class="nav-link" type="button" data-toggle="modal" data-target="#loginModal">Login<span
+                <a href="/" class="navbar-links" type="button" data-toggle="modal" data-target="#loginModal">Login<span
                         class="sr-only">(current)</span></a>
             </li>
         </ul>
 
         <a href="/signup">
-            <button class="btn btn-outline-success my-2 my-sm-0">Sign up</button>
+            <button class="btn btn-navbar my-2 my-sm-0">Sign up</button>
         </a>
 
     </div>
@@ -64,7 +70,9 @@
                         <label> Password: </label>
                         <input class="form-control" type="password" name="login_password" placeholder="secret">
                         <div class="modal-footer">
-                            <a href="/home"><button type="button" class="btn btn-primary">Login</button></a>
+                            <a href="/home">
+                                <button type="button" class="btn btn-primary">Login</button>
+                            </a>
                         </div>
                     </div>
                 </form>
@@ -86,7 +94,6 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-
 
 </body>
 </html>
