--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
           href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
+    <link rel="shortcut icon" href="static\favicon.ico" />
     <title>SWOY Bubble Tea</title>
 </head>
 
@@ -20,13 +21,14 @@
 
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark" style="background:#E7F3FC;">
-    <img class="navbar-brand" href="/home" src="static\cover2.png" style="height:200px;"/>
+    <a href="/home"> <img class="navbar-brand responsive" src="static\cover.png"/></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" style="border: none; outline: none;">
+        <i class="fa fa-bars hamburger-custom" aria-hidden="true"></i>
     </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent" style="text-align: center;">
         <ul class="navbar-nav mr-auto">
 <!--            <li class="nav-item active">-->
 <!--                <a class="navbar-links" href="#">Products<span class="sr-only">(current)</span></a>-->
