--- a/templates/delivery.html
+++ b/templates/delivery.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% from "formhelper.html" import render_field %}
  <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -7,28 +8,29 @@
 
 {% block content %}
 <form method="post" class="delivery">
+    <h2>Delivery Particulars</h2>
     <div class="form-group">
-        <label>Name:</label>
-        <input class="form-control" placeholder="Tom">
+        {{render_field(form.name, class="form-control", placeholder="Tom")}}
+
     </div>
 
     <div class="form-group">
-        <label>Address:</label>
-        <input class="form-control">
+        {{render_field(form.address, class="form-control", placeholder="123 Woodlands Street")}}
+
     </div>
 
     <div class="form-group">
-        <label>Email</label>
-        <input class="form-control">
+        {{render_field(form.email, class="form-control", placeholder="example@email.com")}}
+
     </div>
 
     <div class="form-group">
-        <label>Contact Number</label>
-        <input class="form-control">
+        {{render_field(form.contactNo, class="form-control", placeholder="12345678")}}
+
     </div>
 
-    <div class="form-group text-right">
-        <button class="btn btn-primary">Continue</button>
+    <div class="form-group">
+        <button type="submit" class="btn btn-primary btn-block">Continue</button>
     </div>
 </form>
 {% endblock %}
