--- a/templates/home.html
+++ b/templates/home.html
@@ -12,7 +12,7 @@
                             <p class="card-text">{{ item.name }}</p>
                         </div>
                         <div class="text-center">
-                            <a href="/checkout"><button class="btn btn-primary">Add to Cart</button></a>
+                            <a href="#"><button class="btn btn-primary">Add to Cart</button></a>
                         </div>
                     </div>
                 </div>
