--- a/templates/signup.html
+++ b/templates/signup.html
@@ -10,6 +10,9 @@
 {% block content %}
     <form method="post" class="signup">
         <div class="form-group col">
+            <h2>Sign Up</h2>
+        </div>
+        <div class="form-group col">
             {{render_field(form.username, class="form-control", placeholder="Tom")}}
 <!--            <label for="name" class="col-sm-2 col-form-label">Name:</label>-->
 <!--            <div class="col-sm-10">-->
@@ -38,7 +41,7 @@
 <!--            </div>-->
         </div>
         <div class="text-center">
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary btn-block">Submit</button>
         </div>
     </form>
 
