--- a/templates/home.html
+++ b/templates/home.html
@@ -6,13 +6,13 @@
         <div class="col-md-4">
             <article class="media content-section">
                 <div class="media-body">
-                    <div class="card" style="width: 18rem;">
+                    <div class=" swoy-card card" style="">
                         <img class="card-img-top" src="../static/{{ item.image }}" alt="Card image cap">
                         <div class="card-body">
-                            <p class="card-text">{{ item.name }}</p>
+                            <p class="card-text product-caption">{{ item.name }}</p>
                         </div>
                         <div class="text-center">
-                            <a href="/checkout"><button class="btn btn-primary">Add to Cart</button></a>
+                            <a href="/checkout"><button class="btn btn-primary swoy-btn" style="margin:10px;">Add to Cart</button></a>
                         </div>
                     </div>
                 </div>
