--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,32 @@
 <!doctype html>
 <html lang="en">
 <head>
+    <style type="text/css">
+::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 3px rgba(0,0,0,0.3);
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: #99ffcc;
+    -webkit-box-shadow: inset 0 0 3px rgba(0,0,0,0.5);
+}
+
+::-webkit-scrollbar-thumb:window-inactive {
+	background: rgba(255,0,0,0.4);
+}
+
+    </style>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -11,47 +37,49 @@
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+          integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
-    <link rel="shortcut icon" href="static\favicon.ico" />
+    <link rel="shortcut icon" href="static\favicon.ico"/>
     <title>SWOY Bubble Tea</title>
 </head>
 
 {% from "formhelper.html" import render_field %}
 
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark" style="background:#E7F3FC;">
+<nav class="navbar navbar-expand-lg row" style="background:#E7F3FC;">
     <a href="/home"> <img class="navbar-brand responsive" src="static\cover.png"/></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" style="border: none; outline: none;">
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
+            style="border: none; outline: none;">
         <i class="fa fa-bars hamburger-custom" aria-hidden="true"></i>
     </button>
 
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent" style="text-align: center;">
         <ul class="navbar-nav mr-auto">
-<!--            <li class="nav-item active">-->
-<!--                <a class="navbar-links" href="#">Products<span class="sr-only">(current)</span></a>-->
-<!--            </li>-->
+            <!--            <li class="nav-item active">-->
+            <!--                <a class="navbar-links" href="#">Products<span class="sr-only">(current)</span></a>-->
+            <!--            </li>-->
             <div class="search-box">
                 <form class="form-inline">
-                    <input class="mr-sm-2 input_search" type="text" placeholder="Search" aria-label="Search">
-
-                    <button class="btn btn-navbar my-2 my-sm-0" type="submit" style="border-radius:50%;"><i class="fas fa-search"></i></button>
+                    <input class="mr-sm-2 input-search" type="text" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-navbar swoy-btn my-2 my-sm-0" type="submit" style="border-radius:50%;"><i
+                            class="fas fa-search"></i></button>
                 </form>
             </div>
         </ul>
-        <ul class="navbar-nav">
+        <ul class="navbar-nav" style="margin-right:30px;">
             <li class="nav-item active">
                 <!-- Button trigger modal -->
                 <a href="/" class="navbar-links" type="button" data-toggle="modal" data-target="#loginModal">Login<span
                         class="sr-only">(current)</span></a>
             </li>
+            <li><a href="/signup">
+                <button class="btn btn-navbar swoy-btn my-2 my-sm-0">Sign up</button>
+            </a></li>
         </ul>
 
-        <a href="/signup">
-            <button class="btn btn-navbar my-2 my-sm-0">Sign up</button>
-        </a>
 
     </div>
 </nav>
