--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -1,64 +1,68 @@
 {% extends "base.html" %}
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
+<!-- Bootstrap CSS -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
 
 {% block content %}
 <div class="row">
-    <div class="col-md-9">
-        <div class="container-fluid" id="details">
-            <h1>Transaction Details</h1>
-            <form>
-                <div class="form-group">
-                    <label>Name:</label>
-                    <input type="text" class="form-control" placeholder="Tom">
-                </div>
-                <div class="form-group">
-                    <label>Address:</label>
-                    <input type="text" class="form-control" placeholder="123 Hunan Road">
-                </div>
-
-                <div class="form-row">
-                    <div class="form-group col-md-6">
-                        <label>Credit Card number:</label>
-                        <input type="text" class="form-control" placeholder="0000111122223333">
+    <div class="col-md-8">
+        <div style="margin-left: 30px;">
+            <div class="container-fluid swoy-container transaction-details-container">
+                <h1>Transaction Details</h1>
+                <form>
+                    <div class="form-group">
+                        <label>Name:</label>
+                        <input type="text" class="form-control" placeholder="Tom">
+                    </div>
+                    <div class="form-group">
+                        <label>Address:</label>
+                        <input type="text" class="form-control" placeholder="123 Hunan Road">
                     </div>
 
-                    <div class="form-group col-md-6">
-                        <label>CCV:</label>
-                        <input type="text" class="form-control" placeholder="345">
+                    <div class="form-row">
+                        <div class="form-group col-md-6">
+                            <label>Credit Card number:</label>
+                            <input type="text" class="form-control" placeholder="0000111122223333">
+                        </div>
+
+                        <div class="form-group col-md-6">
+                            <label>CCV:</label>
+                            <input type="text" class="form-control" placeholder="345">
+                        </div>
                     </div>
-                </div>
 
-                <div class="form-group">
-                    <label>Expiry Date</label>
-                    <input type="date" class="form-control">
-                </div>
+                    <div class="form-group">
+                        <label>Expiry Date</label>
+                        <input type="date" class="form-control">
+                    </div>
 
-                <div class="form-group">
-                    <button type="submit" class="btn btn-primary btn-block">Confirm</button>
-                </div>
-            </form>
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-primary btn-block">Confirm</button>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
 
 
-    <div class="col-md-2">
-        <div class="container-fluid" id="order">
-            <h4>Cart
-                <span class="price" style="color:black">
+    <div class="col-md-3">
+        <div>
+            <div class="container-fluid swoy-container order-details-container">
+                <h4>Cart
+                    <span class="price" style="color:black">
                 <i class="fa fa-shopping-cart"></i>
                 <b>4</b>
             </span>
-            </h4>
-            <p><a href="#">Green Tea</a> <span class="price">$3.20</span></p>
-            <p><a href="#">Milk Tea</a> <span class="price">$3.50</span></p>
-            <p><a href="#">Passionfruit Tea</a> <span class="price">$3</span></p>
-            <p><a href="#">Strawberry Tea</a> <span class="price">$3.50</span></p>
-            <hr>
-            <p>Total <span class="price" style="color:black"><b>$13.20</b></span></p>
+                </h4>
+                <p><a href="#">Green Tea</a> <span class="price">$3.20</span></p>
+                <p><a href="#">Milk Tea</a> <span class="price">$3.50</span></p>
+                <p><a href="#">Passionfruit Tea</a> <span class="price">$3</span></p>
+                <p><a href="#">Strawberry Tea</a> <span class="price">$3.50</span></p>
+                <hr>
+                <p>Total <span class="price" style="color:black"><b>$13.20</b></span></p>
+            </div>
         </div>
     </div>
 </div>
