--- a/static/main.css
+++ b/static/main.css
@@ -113,7 +113,7 @@ a.article-title:hover {
     margin-top: 20px;
     }
 
-.signup{
+#signup{
     border:5px solid black;
     border-radius:10px;
     width:800px;
