--- a/templates/signup.html
+++ b/templates/signup.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
 
 {% block content %}
-    <form method="post" class="signup">
+    <form method="post" class="swoy-container" id="signup">
         <div class="form-group col">
             <h2>Sign Up</h2>
         </div>
