--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <style type="text/css">
+    /* this is for the mint-coloured custom scrollbar */
 ::-webkit-scrollbar {
     width: 6px;
     height: 6px;
@@ -26,6 +27,8 @@
 	background: rgba(255,0,0,0.4);
 }
 
+
+
     </style>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -39,6 +42,7 @@
           href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
           integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <link href="../static/hamburgers.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
     <link rel="shortcut icon" href="static\favicon.ico"/>
     <title>SWOY Bubble Tea</title>
@@ -49,10 +53,19 @@
 <body>
 <nav class="navbar navbar-expand-lg row" style="background:#E7F3FC;">
     <a href="/home"> <img class="navbar-brand responsive" src="static\cover.png"/></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
-            style="border: none; outline: none;">
-        <i class="fa fa-bars hamburger-custom" aria-hidden="true"></i>
+    <!--    <button class="" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"-->
+    <!--            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"-->
+    <!--            style="border: none; outline: none;">-->
+    <!--        <i class="fa fa-bars hamburger-custom" aria-hidden="true"></i>-->
+    <!--    </button>-->
+    <button class="hamburger hamburger--collapse navbar-toggler" type="button" data-toggle="collapse"
+            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation" style="border: none; outline: none;">
+  <span class="hamburger-box">
+    <span class="hamburger-inner">
+
+    </span>
+  </span>
     </button>
 
 
@@ -125,5 +138,15 @@
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
 
+<script>
+  // Look for .hamburger
+  var hamburger = document.querySelector(".hamburger");
+  // On click
+  hamburger.addEventListener("click", function() {
+    // Toggle class "is-active"
+    hamburger.classList.toggle("is-active");
+    // Do something else, like open/close menu
+  });
+</script>
 </body>
 </html>
