--- a/static/hamburgers.css
+++ b/static/hamburgers.css
@@ -1,10 +1,14 @@
-/*!
- * Hamburgers
- * @description Tasty CSS-animated hamburgers
- * @author Jonathan Suh @jonsuh
- * @site https://jonsuh.com/hamburgers
- * @link https://github.com/jonsuh/hamburgers
- */
+.hamburger-custom{
+    color: #253D52;
+    font-size: 20px;
+    padding:10px;
+    border-radius:15px;
+    border: 1px solid #253D52;
+    transition: all 0.4s ease;
+    border: none;
+    outline: none;
+}
+
 .hamburger {
   padding: 15px 15px;
   display: inline-block;
@@ -12,21 +16,21 @@
   transition-property: opacity, filter;
   transition-duration: 0.15s;
   transition-timing-function: linear;
-  font: inherit;
-  color: inherit;
+  font: 20px;
+  color: #253D52;
   text-transform: none;
   background-color: transparent;
   border: 0;
   margin: 0;
   overflow: visible; }
   .hamburger:hover {
-    opacity: 0.7; }
+    opacity: 0.6; }
   .hamburger.is-active:hover {
-    opacity: 0.7; }
+    opacity: 0.6; }
   .hamburger.is-active .hamburger-inner,
   .hamburger.is-active .hamburger-inner::before,
   .hamburger.is-active .hamburger-inner::after {
-    background-color: #000; }
+    background-color: #253D52; }
 
 .hamburger-box {
   width: 40px;
