--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -14,7 +14,7 @@
                 <form>
                     <div class="form-group">
                         <label>Name:</label>
-                        <input type="text" class="form-control" placeholder="Tom">
+                        <input type="text" class="form-control" placeholder="Tommy Hilfiger">
                     </div>
                     <div class="form-group">
                         <label>Address:</label>
