--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
             <article class="media content-section">
                 <div class="media-body">
                     <div class=" swoy-card card" style="">
-                        <img class="card-img-top" src="../static/{{ item.image }}" alt="Card image cap">
+                        <img class="card-img-top responsive" src="../static/{{ item.image }}" alt="Card image cap">
                         <div class="card-body">
                             <p class="card-text product-caption">{{ item.name }}</p>
                         </div>
