--- a/templates/product.html
+++ b/templates/product.html
@@ -13,7 +13,7 @@
             <div class="container-fluid swoy-container transaction-details-container">
 
                 <h1> Earl Grey Milk Tea </h1>
-                <img src="../static/Earl Grey Boba.jpeg" style="max-width: 500px;">
+                <img src="../static/Earl Grey Boba.jpeg" style="max-width: 500px;" class="responsive">
 
             </div>
         </div>
