--- a/templates/base.html
+++ b/templates/base.html
@@ -92,6 +92,11 @@
             <li><a href="/signup">
                 <button class="btn btn-navbar swoy-btn my-2 my-sm-0">Sign up</button>
             </a></li>
+            <li><a href="/cart">
+                <button class="btn btn-navbar swoy-btn my-2 my-sm-0"><i class="fa fa-shopping-bag"></i>  Cart</button>
+            </a>
+
+            </li>
         </ul>
 
 
