--- a/static/admin.css
+++ b/static/admin.css
@@ -39,50 +39,11 @@
   }
 }
 
-.openbtn {
-  -webkit-transition: all 0.3s ease;
-    -moz-transition: all 0.3s ease;
-  -ms-transition: all 0.3s ease;
-  -o-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-}
-
-
 body {
   font-size: 0.9rem;
 }
 
-.page-wrapper .sidebar-wrapper,
-.sidebar-wrapper .sidebar-brand > a,
-.sidebar-wrapper .sidebar-dropdown > a:after,
-.sidebar-wrapper .sidebar-menu .sidebar-dropdown .sidebar-submenu li a:before,
-.sidebar-wrapper ul li a i,
-.page-wrapper .page-content,
-.sidebar-wrapper .sidebar-search input.search-menu,
-.sidebar-wrapper .sidebar-search .input-group-text,
-.sidebar-wrapper .sidebar-menu ul li a,
-.show-sidebar,
-.close-sidebar {
-  -webkit-transition: all 0.3s ease;
-  -moz-transition: all 0.3s ease;
-  -ms-transition: all 0.3s ease;
-  -o-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-}
-
-.show-sidebar{
-    position: fixed;
-    left: 0;
-    top: 30px;
-    border-radius: 0 4px 4px 0px;
-    width: 50px;
-    transition-delay: 0.3s;
-    padding: 20px;
-    border: 1px solid black;}
-
-/*----------------page-wrapper----------------*/
-
-.page-wrapper {
+.page-wrapper, .admin-sidebar {
   height: 100vh;
 }
 
@@ -98,41 +59,12 @@ body {
   background: #1e2229;
 }
 
-/*----------------toggeled sidebar----------------*/
-
-.page-wrapper.toggled .sidebar-wrapper {
-  left: 0px;
-}
-
-@media screen and (min-width: 768px) {
-  .page-wrapper.toggled .page-content {
-    padding-left: 300px;
-  }
-}
-/*----------------show sidebar button----------------*/
-.show-sidebar {
-  position: fixed;
-  left: 0;
-  top: 30px;
-  border-radius: 0 4px 4px 0px;
-  width: 50px;
-  transition-delay: 0.3s;
-  padding: 20px;
-  border: 1px solid black;
-  background: black;
-}
-.page-wrapper.toggled .show-sidebar {
-  left: -40px;
-}
-/*----------------sidebar-wrapper----------------*/
-
 .sidebar-wrapper {
   width: 260px;
   height: 100%;
   max-height: 100%;
   position: fixed;
   top: 0;
-  left: -300px;
   z-index: 999;
 }
 
@@ -327,67 +259,6 @@ body {
   right: 17px;
 }
 
-/*--------------------------side-footer------------------------------*/
-
-.sidebar-footer {
-  position: absolute;
-  width: 100%;
-  bottom: 0;
-  display: flex;
-}
-
-.sidebar-footer > a {
-  flex-grow: 1;
-  text-align: center;
-  height: 30px;
-  line-height: 30px;
-  position: relative;
-}
-
-.sidebar-footer > a .notification {
-  position: absolute;
-  top: 0;
-}
-
-.badge-sonar {
-  display: inline-block;
-  background: #980303;
-  border-radius: 50%;
-  height: 8px;
-  width: 8px;
-  position: absolute;
-  top: 0;
-}
-
-.badge-sonar:after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  border: 2px solid #980303;
-  opacity: 0;
-  border-radius: 50%;
-  width: 100%;
-  height: 100%;
-  animation: sonar 1.5s infinite;
-}
-
-/*--------------------------page-content-----------------------------*/
-
-.page-wrapper .page-content {
-  display: inline-block;
-  width: 100%;
-  padding-left: 0px;
-  padding-top: 20px;
-}
-
-.page-wrapper .page-content > div {
-  padding: 20px 40px;
-}
-
-.page-wrapper .page-content {
-  overflow-x: hidden;
-}
 
 /*------scroll bar---------------------*/
 
@@ -424,7 +295,6 @@ body {
 ::-webkit-scrollbar-corner {
   background: transparent;
 }
-
 
 /*-----------------------------chiller-theme-------------------------------------------------*/
 
