--- a/templates/signup.html
+++ b/templates/signup.html
@@ -8,37 +8,21 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
 
 {% block content %}
-    <form method="post" class="swoy-container" id="signup">
+    <form method="post" class="swoy-container" id="signup" action="{{url_for('signup')}}">
         <div class="form-group col">
             <h2>Sign Up</h2>
         </div>
         <div class="form-group col">
             {{render_field(form.username, class="form-control", placeholder="Tom")}}
-<!--            <label for="name" class="col-sm-2 col-form-label">Name:</label>-->
-<!--            <div class="col-sm-10">-->
-<!--                <input type="text" class="form-control" id="name" placeholder="Enter Name">-->
-<!--            </div>-->
         </div>
         <div class="form-group col">
             {{render_field(form.email, class="form-control", placeholder="apple@example.com")}}
-<!--            <label for="email" class="col-sm-2 col-form-label">Email:</label>-->
-<!--            <div class="col-sm-10">-->
-<!--                <input type="email" class="form-control" id="email" placeholder="apple@example.com">-->
-<!--            </div>-->
         </div>
         <div class="form-group col">
             {{render_field(form.password, class="form-control", placeholder="secret")}}
-<!--            <label for="inputPassword" class="col-sm-2 col-form-label">Password:</label>-->
-<!--            <div class="col-sm-10">-->
-<!--                <input type="password" class="form-control" id="inputPassword" placeholder="Enter Password">-->
-<!--            </div>-->
         </div>
         <div class="form-group col">
             {{render_field(form.confirm, class="form-control", placeholder="Repeat Password")}}
-<!--            <label for="repeatPassword" class="col-sm-3 col-form-label">Repeat Password:</label>-->
-<!--            <div class="col-sm-10">-->
-<!--                <input type="password" class="form-control" id="repeatPassword" placeholder="Repeat Password">-->
-<!--            </div>-->
         </div>
         <div class="text-center">
             <button type="submit" class="btn btn-primary btn-block">Submit</button>
