--- a/templates/admin_base.html
+++ b/templates/admin_base.html
@@ -19,7 +19,8 @@
 
 
 </head>
-<div class="chiller-theme admin-sidebar" style="display: block">
+<body>
+    <div class="chiller-theme admin-sidebar" style="display: block">
     <nav id="sidebar" class="sidebar-wrapper">
         <div class="sidebar-content">
             <div class="sidebar-brand">
@@ -149,7 +150,8 @@
                 </div>
             </div>
         </div>
-
+    </nav>
+    </div>
 
 <!-- page-wrapper -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -184,5 +186,7 @@
       }
     });
 </script>
+</body>
+
 
 </html>
